syntax = "proto3";

package videoservice;

option go_package = "video_server/proto";

service VideoProcessingService {
  rpc ProcessNewVideoRequest(VideoInfo) returns (ProcessNewVideoResponse) {}
}

message VideoInfo {
  string video_slug = 1;
  string course_slug = 2;
  string description = 3;
  string user_email = 4;
  int64 timestamp = 5;
  string s3_key = 6;
}

message ProcessNewVideoResponse{
    string status = 1;
}